--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -78,7 +78,7 @@
     </div>
 
 
-    <!--POP-UP/Modal-->
+    <!--POP-UP/Modal/Carrito-->
     <div class="pop-up">
       <div class="pop-up-wrap">
         <div class="pop-up-title">
@@ -94,7 +94,7 @@
           <div class="sub-content">
             <h2>Su pedido:</h2>
             <p>Agrega, elimina o medifica en tu carrito a voluntad :D</p>
-            <form>
+            <form class="carrito">
               <button>x</button>
               <img src="/" alt="">
               <label for="/"></label>
