--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -53,7 +53,8 @@
       <!--login-->
       <div class="navbar-right">
         <ul>
-          <li><input class="control" type="email" name="usuario" id="usuario" placeholder="abc@example.com"></li>&nbsp;
+          <li><input class="control" type="email" name="usuario" id="usuario" placeholder="n° cliente o correo"></li>
+          &nbsp;
           <li><input class="control" type="password" name="contrasenia" id="contrasenia" placeholder="*******"></li>
           &nbsp;
           <li><input class="botons" type="submit" value="Ingresar"></li>&nbsp;
@@ -88,27 +89,53 @@
           <a href="#"><img src="assets/icons/icons-facebook.svg" alt=""></a>
           <a href="#"><img src="assets/icons/icons-instagram.svg" alt=""></a>
         </div>
-        <div class="subcription">
+        <div class="pedido">
           <div class="line"></div>
           <i class="cerrar" id="close">[x]</i>
           <div class="sub-content">
             <h2>Su pedido:</h2>
-            <p>Agrega, elimina o medifica en tu carrito a voluntad :D</p>
-            <form class="carrito">
-              <button>x</button>
-              <img src="/" alt="">
-              <label for="/"></label>
-              (-)<input type="number" name="cantidad" id="cantidad">(+)
-              <label for="/">$</label>
-              <span id="total">0</span><!--usas el span para rellenar algo, en este caso el resultado de la cuenta-->
-              <button>Pagar</button>
-              <hr>
-              <input type="text" class="subs-cosas" placeholder="Agregar cosas">
-              <button class="subs-send" type="submit">Enviar</button>
-            </form>
-          </div>
+            <p>Agregar, eliminar o medificar tu carrito a voluntad :D</p>
+            <div class="box">
+              <form>
 
-          <div class="line"></div>
+                <div class="carrito">
+                  <input type="hidden" name="cantidad" class="cantidad">
+                  <button type="button" class="menos" label="Quitar una unidad">
+                    <span> - </span><!--usas el span para rellenar algo, en este caso el resultado de la cuenta-->
+                  </button>
+                  <input rows="1" class="input-cant">
+                  <button type="button" class="mas" label="Agregar una unidad">
+                    <span>+</span>
+                  </button>
+                  <button>img</button>
+                  <label for=""> nombre</label>
+                  <div class="precio"><input type="text" class="precio" placeholder="$"></div>
+                  <button class="eliminar">x</button>
+                </div>
+                <!--ejemplo 2 (hay que eliminarlo cuando hagas que se generen mas solos Agustin)-->
+                <div class="carrito">
+                  <input type="hidden" name="cantidad" class="cantidad">
+                  <button type="button" class="menos" label="Quitar una unidad">
+                    <span> - </span>
+                  </button>
+                  <input rows="1" class="input-cant">
+                  <button type="button" class="mas" label="Agregar una unidad">
+                    <span>+</span>
+                  </button>
+                  <button>img</button>
+                  <label for=""> nombre</label>
+                  <div class="precio"><input type="text" class="precio" placeholder="$"></div>
+                  <button class="eliminar">x</button>
+                </div>
+                <br>
+                <hr>
+                <p>Total: $</p>
+                <input type="text" class="precio_total" placeholder="$">
+                <button class="pagar" type="submit">Pagar</button>
+              </form>
+            </div>
+            <div class="line"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -158,7 +185,7 @@
     </div>
   </section><br>
 
-  <form action="../logica/x.php" method="post">
+  <form action="../logica/x.php" method="post" class="input_menues">
     <fieldset>
       <input type="radio" name="TipoDieta" id="formCeliaco" class="form-check-input" />
       <label for="TipoDieta">Celiaco</label>
