carrito y selector a viandas

--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -27,10 +27,8 @@
       <img src="./assets/icons/icon_menu.svg" alt="menu" class="menu">
 
       <div class="navbar-left">
-        <!--<img src="./assets/recursos/logo_sisviansa.png" alt="logo" class="logo">-->
-        <a href="login.html"><img src="./assets/recursos/logo_sisviansa.png" alt="logo" class="logo"
-            title="login empleados"></a><!--redirecciona al login empleados-->
-
+        <img src="./assets/recursos/logo_sisviansa.png" alt="logo" class="logo" title="cambiar de usuario">
+        
         <ul>
           <li></li>
           <li>
