--- a/presentacion/viandas.html
+++ b/presentacion/viandas.html
@@ -12,86 +12,124 @@
 </head>
 
 <body>
+
   <header>
     <nav>
-      <img src="./assets/icons/icon_menu.svg" alt="menu" class="menu" />
+      <img src="./assets/icons/icon_menu.svg" alt="menu" class="menu">
 
       <div class="navbar-left">
-        <img src="./assets/recursos/logo_sisviansa.png" alt="logo" class="logo" />
-
+        <img src="./assets/recursos/logo_sisviansa.png" alt="logo" class="logo" title="cambiar de usuario">
+        
         <ul>
           <li></li>
           <li>
             <a href="index.html">Inicio</a>
-          </li>
-          &nbsp;
+          </li>&nbsp;
           <li>
             <a href="dietas.html">Dietas</a>
-          </li>
-          &nbsp;
+          </li>&nbsp;
           <li>
             <a href="viandas.html">Viandas</a>
-          </li>
-          &nbsp;
+          </li>&nbsp;
           <li>
             <a href="nuevo.html">Nuevo</a>
-          </li>
-          &nbsp;
+          </li>&nbsp;
           <li>
             <a href="nosotros.html">Nosotros</a>
           </li>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-          <!--login-->
-          <li>
-            <input class="control" type="email" name="usuario" id="usuario" placeholder="abc@example.com" />
-          </li>
+        </ul>
+      </div>
+      <!--login-->
+      <div class="navbar-right">
+        <ul>
+          <li><input class="control" type="email" name="usuario" id="usuario" placeholder="n° cliente o correo"></li>
           &nbsp;
-          <li>
-            <input class="control" type="password" name="contrasenia" id="contrasenia" placeholder="*******" />
-          </li>
+          <li><input class="control" type="password" name="contrasenia" id="contrasenia" placeholder="*******"></li>
           &nbsp;
-          <li><input class="botons" type="submit" value="Ingresar" /></li>
-          &nbsp;
+          <li><input class="botons" type="submit" value="Ingresar"></li>&nbsp;
           <!--<li class="navbar-email">sisviansa@gmail.com</li>-->
-          <p><a href="registro.html">Registrarse</a></p>
-          &nbsp;
+          <p><a href="registro.html">Registrarse</a></p>&nbsp;
           <li class="navbar-shopping-cart">
-            <button type="button" class="btn-abrir">
-              <img img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart" />
-            </button>
+            <!--<button type="image" class="btn-abrir" img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart"></button>-->
+            <button type="button" class="btn-abrir"> <img img src="./assets/icons/icon_shopping_cart.svg"
+                alt="shopping cart" /></button>
             <div>0</div>
           </li>
         </ul>
       </div>
     </nav>
+    <!-- Selector_de_Inicio -->
+    <div class="selec_inicio">
+      <div class="selector">
+        <p class="us">Usuario</p>
+        <button class="transp" id="cerrar">Cliente</button>
+        <button class="transp" id="empleadoButton">Empleado</button>
+      </div>
+    </div>
+
+
+    <!--POP-UP/Modal/Carrito-->
     <div class="pop-up">
       <div class="pop-up-wrap">
         <div class="pop-up-title">
-          <h2>Sisviansa</h2>
+          <h2> Sisviansa </h2>
           <p>Sistema de viandas saludables.</p>
           <!--<a href="#"><img src="assets/icons/icons-play-button.svg" alt=""></a>-->
-          <a href="#"><img src="assets/icons/icons-facebook.svg" alt="" /></a>
-          <a href="#"><img src="assets/icons/icons-instagram.svg" alt="" /></a>
+          <a href="#"><img src="assets/icons/icons-facebook.svg" alt=""></a>
+          <a href="#"><img src="assets/icons/icons-instagram.svg" alt=""></a>
         </div>
-        <div class="subcription">
+        <div class="pedido">
           <div class="line"></div>
-          <i class="far fa-times-circle" id="close">[x]</i>
+          <i class="cerrar" id="close">[x]</i>
           <div class="sub-content">
             <h2>Su pedido:</h2>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <form>
-              <p>...</p>
-              <button class="subs-send" type="submit">Pagar</button>
-            </form>
-          </div>
+            <p>Agregar, eliminar o medificar tu carrito a voluntad :D</p>
+            <div class="box">
+              <form>
 
-          <div class="line"></div>
+                <div class="carrito">
+                  <input type="hidden" name="cantidad" class="cantidad">
+                  <button type="button" class="menos" label="Quitar una unidad">
+                    <span> - </span><!--usas el span para rellenar algo, en este caso el resultado de la cuenta-->
+                  </button>
+                  <input rows="1" class="input-cant">
+                  <button type="button" class="mas" label="Agregar una unidad">
+                    <span>+</span>
+                  </button>
+                  <button>img</button>
+                  <label for=""> nombre</label>
+                  <div class="precio"><input type="text" class="precio" placeholder="$"></div>
+                  <button class="eliminar">x</button>
+                </div>
+                <!--ejemplo 2 (hay que eliminarlo cuando hagas que se generen mas solos Agustin)-->
+                <div class="carrito">
+                  <input type="hidden" name="cantidad" class="cantidad">
+                  <button type="button" class="menos" label="Quitar una unidad">
+                    <span> - </span>
+                  </button>
+                  <input rows="1" class="input-cant">
+                  <button type="button" class="mas" label="Agregar una unidad">
+                    <span>+</span>
+                  </button>
+                  <button>img</button>
+                  <label for=""> nombre</label>
+                  <div class="precio"><input type="text" class="precio" placeholder="$"></div>
+                  <button class="eliminar">x</button>
+                </div>
+                <br>
+                <hr>
+                <p>Total: $</p>
+                <input type="text" class="precio_total" placeholder="$">
+                <button class="pagar" type="submit">Pagar</button>
+              </form>
+            </div>
+            <div class="line"></div>
+          </div>
         </div>
       </div>
     </div>
-    <br />
   </header>
+
   <div class="colum" id="dieta">
     <h1>Ordenar por dieta</h1>
     <hr />
