mostrando cantidad en el carrito

--- a/presentacion/login.html
+++ b/presentacion/login.html
@@ -52,7 +52,7 @@
                 src="./assets/icons/icon_shopping_cart.svg"
                 alt="shopping cart"
               />
-              <div>0</div>
+              <div id="cantCarrito"></div>
             </li>
           </ul>
         </div>
