--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -62,7 +62,7 @@
                 src="./assets/icons/icon_shopping_cart.svg"
                 alt="shopping cart"
               />
-              <div>2</div>
+              <div id="cantCarrito"></div>
             </li>
           </ul>
         </div>
